--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,5 @@ project(helloworld)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(helloworld main.cpp)
+
+install(TARGETS helloworld DESTINATION bin)
